--- a/content/note/2017-10-20-my_stupid_git.html
+++ b/content/note/2017-10-20-my_stupid_git.html
@@ -16,7 +16,7 @@ categories: ['computing']
 <div id="basic-structure" class="section level1">
 <h1>Basic structure</h1>
 <div class="figure">
-<img src="images/dr_structure.png" />
+<img src="img/dr_structure.png" />
 
 </div>
 <ul>
