--- a/content/note/2017-10-20-my_stupid_git.html
+++ b/content/note/2017-10-20-my_stupid_git.html
@@ -119,7 +119,7 @@ git branch -d &lt;BRANCH_NAME&gt;</code></pre>
 <div id="conflict" class="section level2">
 <h2>conflict</h2>
 <div class="figure">
-<img src="images/conflict.png" />
+<img src="img/conflict.png" />
 
 </div>
 <pre><code>git checkout master
@@ -150,7 +150,7 @@ pull: 원격 저장소의 내용을 가져오기
 <li>특정한 브랜치를 다른 브랜치로 합친 후에 이전 브랜치는 없애고 싶을 때, 한번에 처리하는 명령어가 rebase다.</li>
 </ul>
 <div class="figure">
-<img src="images/rebase_1.png" />
+<img src="img/rebase_1.png" />
 
 </div>
 <p>원래 상태는 HEAD를 master로 하고 브랜치는 다음과 같이 3가지다.</p>
@@ -158,20 +158,20 @@ pull: 원격 저장소의 내용을 가져오기
 git rebase master </code></pre>
 <p>issue3로 체크아웃을 한 뒤에 해당 브랜치를 master로 rebase한다. 만일 두 노드 사이에 충돌이 없다면 rebase가 되곘지만, 충돌이 있을 경우에는 해당 파일을 수정해줘야 한다. 수정 후 아래와 같이 rebase한다.</p>
 <div class="figure">
-<img src="images/rebase_2.png" />
+<img src="img/rebase_2.png" />
 
 </div>
 <pre><code>git add myfile.txt 
 git rebase --continue </code></pre>
 <div class="figure">
-<img src="images/rebase_3.png" />
+<img src="img/rebase_3.png" />
 
 </div>
 <pre><code>git checkout master 
 git merge issue3</code></pre>
 <p><code>master</code>로 체크아웃한 이후에 issue3 merge하면 아래와 같이 가지가 정리된다.</p>
 <div class="figure">
-<img src="images/rebase_4.png" />
+<img src="img/rebase_4.png" />
 
 </div>
 </div>
