--- a/content/note/2017-10-20-my_stupid_git.html
+++ b/content/note/2017-10-20-my_stupid_git.html
@@ -94,7 +94,11 @@ git push </code></pre>
 <ul>
 <li><code>--amend --no-edit</code>: 전에 commit message를 그대로 쓰고 commit한다.</li>
 </ul>
+<pre><code>git push -f [origin] [master]</code></pre>
 <hr />
+<ul>
+<li><code>-f</code>: commit을 새로 만든 것이 아니기 때문에, 그대로 push를 하게 되면 origin과 맞지 않게 된다. 강제로 push를 해서 맞춰주는 명령어다.</li>
+</ul>
 </div>
 </div>
 <div id="branch" class="section level1">
