--- a/content/note/2017-10-20-my_stupid_git.html
+++ b/content/note/2017-10-20-my_stupid_git.html
@@ -22,8 +22,12 @@ categories: ['computing']
 <ul>
 <li><code>working dir</code>: local의 작업디렉토리</li>
 <li><code>index</code>: staging area. 커밋될 파일들을 올려 두는 공간</li>
-<li><code>HEAD</code>: 최후의 커밋</li>
+<li><code>HEAD</code>: 마지막으로 커밋이 이루어진 branch</li>
 </ul>
+<div class="figure">
+<img src="img/git-operations.png" />
+
+</div>
 <hr />
 </div>
 <div id="basic-command" class="section level1">
@@ -37,7 +41,7 @@ categories: ['computing']
 <pre><code>echo &quot;# YOUR_README_NAME&quot; &gt;&gt; README.md 
 git init
 git add README.md 
-git commit -m &quot;YOUR_COMMIT_MESSAGE/first commit&quot;
+git commit -m &quot;YOUR_COMMIT_MESSAGE(e.g. first commit)&quot;
 git remote add origin &lt;&lt;https://YOUR_REMOTE_GIT_URL&gt;&gt;
 git push -u origin master </code></pre>
 <ul>
@@ -57,7 +61,7 @@ git add -u
 git commit -m &quot;YOUR_COMMENT&quot;
 git push </code></pre>
 <ul>
-<li>git 운용의 기본적인 흐름 혹은 기본 셋</li>
+<li>git 운용의 기본적인 흐름 혹은 기본 명령어 셋</li>
 <li><code>push</code>만 명령하면 되는 것은 앞서 <code>git push -u origin master</code> origin master로 local과 remote repository의 upstream을 정해두었기 때문이다.</li>
 </ul>
 <hr />
@@ -82,11 +86,17 @@ git push </code></pre>
 <div id="pull" class="section level2">
 <h2><code>pull</code></h2>
 <ul>
-<li><p><code>pull</code> 명령어는 기본적으로 <code>fetch</code>(가져오기)와 <code>merge</code>(병합하기)를 동시에 구현하는 것이다. 보통 <code>fetch</code>는 repository의 내용을 가져와 <code>fetch_head</code>라는 local branch에 임시로 저장해둔다. <code>merge</code>는 이렇게 가져온 데이터를 원래 흐름과 병합하는 것이다. 이 둘을 동시에 구현하는 것이 <code>pull</code>이다.</p></li>
-<li><p>논리적으로 봤을 때, origin과 master에서 모두 변경 사항이 있을 경우는 둘에 충돌이 일어날 수 밖에 없다. 이런 경우 이 충돌을 해결해줘야 <code>push</code>가 가능하다.</p></li>
-<li><p>깔끔한 이력 관리를 위해서는 아래와 같이 rebase를 활용해서 pull을 해주면 좋다. rebase를 해주면 별도의 브랜치를 만들지 않겠다는 의도를 분명히 하는 것이고, 이에 따라서 log가 깔끔하고 단순해진다.</p></li>
+<li><code>pull</code>: <code>fetch</code>(가져오기)와 <code>merge</code>(병합하기)를 동시에 구현
+<ul>
+<li><code>fetch</code>: repository의 내용을 가져와 <code>FETCH_HEAD</code>라는 local branch에 임시로 저장</li>
+<li><code>merge</code>: <code>fetch</code> 불러온 데이터를 원래 흐름과 병합</li>
+</ul></li>
+<li>origin과 master에서 모두 변경 사항이 있을 경우는 둘에 충돌이 일어날 수 밖에 없다. 이런 경우 이 충돌을 해결해줘야 <code>push</code>가 가능하다.</li>
 </ul>
 <pre><code>&gt; git pull --rebase</code></pre>
+<ul>
+<li>깔끔한 이력 관리를 위해서는 rebase를 활용해서 pull을 해주면 좋다. rebase를 해주면 별도의 브랜치를 만들지 않겠다는 의도를 분명히 하는 것이고, 이에 따라서 log가 깔끔하고 단순해진다.</li>
+</ul>
 </div>
 <div id="commit" class="section level2">
 <h2><code>commit</code></h2>
@@ -100,19 +110,22 @@ git push </code></pre>
 </ul>
 <pre><code>git commit --amend --no-edit</code></pre>
 <ul>
-<li><code>--amend --no-edit</code>: 전에 commit message를 그대로 쓰고 commit한다.</li>
-<li>문제는 이대로 push를 할 수 없다는 것이다. 앞서 push된 버전과 현 수정된 버전이 동일한 commit인데, 내용이 다르다. 즉, SHA-1이 다르다. 이때 강제로 <code>push</code>를 하고 싶다면 아래와 같이 한다.</li>
+<li><code>--amend --no-edit</code>: 전에 commit message를 그대로 쓰고 commit한다.
+<ul>
+<li>이대로 push를 할 수 없다. 앞서 push된 버전과 현 수정된 버전이 같은 commit인데 내용은 다르다. 즉, SHA-1이 다르다. 이때 강제로 <code>push</code>를 하고 싶다면 아래와 같이 한다.</li>
+</ul></li>
 </ul>
 <pre><code>git push -f [origin] [master]</code></pre>
-<hr />
 <ul>
 <li><code>-f</code>: commit을 새로 만든 것이 아니기 때문에, 그대로 push를 하게 되면 origin과 맞지 않게 된다. 강제로 push를 해서 맞춰주는 명령어다.</li>
 </ul>
+<hr />
 </div>
 </div>
 </div>
-<div id="branch" class="section level1">
-<h1><code>branch</code></h1>
+<div id="concept-of-branch" class="section level1">
+<h1>Concept of <code>branch</code></h1>
+<p>브랜치란 현재 <code>HEAD</code> 스냅샷에 대해서 다른 이름을 부여해주는 작업이다. 일단, 아무런 변경이 없는 이상 브랜치는 분기되지 않고 노드에 함께 머물러 있다. 일단 기본적인 명령어는 아래와 같다.</p>
 <div id="basic" class="section level2">
 <h2>Basic</h2>
 <pre><code>git branch &lt;BRANCH_NAME&gt;
@@ -126,21 +139,50 @@ git checkout -b &lt;BRANCH_NAME&gt;</code></pre>
 <pre><code>git merge &lt;COMMIT_NAME&gt; 
 git branch -d &lt;BRANCH_NAME&gt;</code></pre>
 <ul>
-<li><code>merge</code>: 커밋된 다른 지점과 현재 브랜치를 병합한다.</li>
+<li><code>merge</code>: 커밋된 다른 지점과 현재 HEAD의 브랜치를 병합한다.</li>
 <li><code>-d</code>: 브랜치를 삭제하기 위해서 사용하는 명령어</li>
 </ul>
 </div>
-<div id="conflict" class="section level2">
-<h2>conflict</h2>
+<div id="in-practice" class="section level2">
+<h2>In practice</h2>
+<pre><code>&gt; git branch issue2
+&gt; git branch issue3
+&gt; git checkout issue2
+  Switched to branch &#39;issue2&#39;
+&gt; git branch
+* issue2
+  issue3
+  master</code></pre>
+<p>위 명령어를 수행한 상태의 그림이다.</p>
+<div class="figure">
+<img src="img/branch1.png" />
+
+</div>
+<p>이 상태에서 issue2의 어떤 내용을 수정했다고 하자.</p>
+<div class="figure">
+<img src="img/branch2.png" />
+
+</div>
+<pre><code>&gt; git checkout issue3</code></pre>
+<p>그리거 뭔가 내용을 또 수정했다고 하자.</p>
+<div class="figure">
+<img src="img/branch3.png" />
+
+</div>
+<p>그리고 master를 issue2와 병합하면 다음의 그림과 같은 상탤가 된다.</p>
 <div class="figure">
 <img src="img/conflict.png" />
 
 </div>
+</div>
+<div id="conflict" class="section level2">
+<h2>Conflict</h2>
+<p>위의 그림에서 아래의 명령어를 수행한다고 하자.</p>
 <pre><code>git checkout master
 git merge issue3</code></pre>
 <ul>
-<li>이때 어떤 파일에 대해서 master의 내용과 issue의 내용이 서로 다른 부분이 있다고 하자.</li>
-<li>병합이 무리 없이 가능하다면 그대로 병합한다. 즉, A와 B가 있을 떄 B가 A의 내용을 포함하고 있다면, 병합이 가능하다.</li>
+<li>이때 어떤 파일에 대해서 <code>HEAD</code>의 master의 내용과 issue3의 내용이 서로 다른 부분이 있다고 하자.</li>
+<li>병합이 무리 없이 가능하다면 그대로 병합된다. 즉, A와 B가 있을 떄 B가 A의 내용을 포함하고 있다면, 병합이 가능하다.</li>
 <li>파일 자체가 다른 경우는 인간의 판단이 필요하다. 해당 파일을 열면 아래와 같이 표현되어 있다.</li>
 </ul>
 <pre><code>원숭이도 이해할 수 있는 Git 명령어
@@ -156,12 +198,13 @@ pull: 원격 저장소의 내용을 가져오기
 <hr />
 </div>
 </div>
-<div id="rebase" class="section level1">
-<h1><code>rebase</code></h1>
+<div id="what-is-rebase" class="section level1">
+<h1>What is <code>rebase</code></h1>
 <div class="section level2">
 <h2>개념</h2>
 <ul>
 <li>특정한 브랜치를 다른 브랜치로 합친 후에 이전 브랜치는 없애고 싶을 때, 한번에 처리하는 명령어가 rebase다.</li>
+<li>리베이스는 병합될 브랜치에서 시작한다.</li>
 </ul>
 <div class="figure">
 <img src="img/rebase_1.png" />
@@ -188,12 +231,8 @@ git merge issue3</code></pre>
 <img src="img/rebase_4.png" />
 
 </div>
-</div>
-</div>
-<div id="branch-1" class="section level1">
-<h1><code>branch</code></h1>
-<p><a href="https://backlog.com/git-tutorial/kr/stepup/stepup2_1.html" class="uri">https://backlog.com/git-tutorial/kr/stepup/stepup2_1.html</a></p>
 <hr />
+</div>
 </div>
 <div id="case-by-case" class="section level1">
 <h1>Case by case</h1>
@@ -211,6 +250,7 @@ git pull origin master</code></pre>
 <pre><code>git pull --rebase
 git push
 git stash pop</code></pre>
+<hr />
 </div>
 </div>
 <div id="miscellaneous" class="section level1">
@@ -229,17 +269,20 @@ git stash pop</code></pre>
 <ul>
 <li>ESC를 치면 화면 아래 command 창으로 이동한다. :qw(quit &amp; write)를 입력한다.</li>
 </ul>
+<hr />
 </div>
 </div>
 <div id="homework" class="section level1">
 <h1>Homework</h1>
+<p>앞으로 더 알아야 하지만 지금은 그냥 넘어갈 내용들이다.</p>
 <div id="log" class="section level2">
 <h2><code>log</code></h2>
+<p>여러가지 옵션이 있고 활용하면 좋을 듯 하지만, 당분간 나에게는 히스토리를 그냥 순서대로 보여주는 아래 명령어 정도면 충분할 듯 싶다.</p>
 <pre><code>git log --pretty=oneline</code></pre>
 <p><a href="https://git-scm.com/book/ko/v1/Git%EC%9D%98-%EA%B8%B0%EC%B4%88-%EC%BB%A4%EB%B0%8B-%ED%9E%88%EC%8A%A4%ED%86%A0%EB%A6%AC-%EC%A1%B0%ED%9A%8C%ED%95%98%EA%B8%B0">링크</a></p>
 </div>
-</div>
-<div id="other-link" class="section level1">
-<h1>Other link</h1>
+<div id="other-link" class="section level2">
+<h2>Other link</h2>
 <p><a href="http://meetup.toast.com/posts/116" class="uri">http://meetup.toast.com/posts/116</a></p>
+</div>
 </div>
