bigfoot.js update

--- a/public/404.html
+++ b/public/404.html
@@ -27,6 +27,14 @@
 404 NOT FOUND
 
   <footer>
+
+<link rel="stylesheet" href="/css/barefoot.min.css">
+<script src="/js/barefoot.min.js"></script>
+
+<script>
+  lf = new BareFoot();
+  lf.init();
+</script>
   <script src="//yihui.name/js/math-code.js"></script>
 <script async src="//cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
