UPDATE: _index.Rmarkdown

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
 <h2 id="faithless-in-theory-but-still-stuck-in-methods"><em>faithless in theory, but still stuck in methods</em></h2>
 
-<p>This is personal blog by Junsok Huhh. This site is built by <a href="https://gohugo.io">Hugo</a> and theme XMIN by <a href="https://themes.gohugo.io/hugo-xmin/">Yihui Xie</a></p>
+<p>This is personal blog by Junsok Huhh. This site is built with <a href="https://gohugo.io">Hugo</a> and XMIN theme by <a href="https://themes.gohugo.io/hugo-xmin/">Yihui Xie</a></p>
 
 
 <ul>
