--- a/content/note/2017-11-15-magrittr.html
+++ b/content/note/2017-11-15-magrittr.html
@@ -2,7 +2,7 @@
 title: "Magrittr - Ceci n'est pas un pipe."
 author: "Junsok Huhh"
 date: 2017-11-15
-tags: ['pipe', 'magrittr', 'R', 'R-pacakge']
+tags: ['pipe', 'magrittr', 'R', 'R-package']
 categories: ['coding'] 
 ---
 
@@ -61,10 +61,10 @@ library(&#39;magrittr&#39;)</code></pre>
 ## 10          4.9         3.1          1.5         0.1  setosa</code></pre>
 <p>여기서 주의할 사항 하나 짚고 가겠다. 닷(<code>.</code>)을 지정할 때 앞의 예처럼 단순한 형태면 상관없다. 다만, 닷(<code>.</code>)이 다른 또다른 명령에 앞뒤로 다시 걸치게 되면 (영어로 하면 nested), 원래 형태 즉 lhs가 첫번째 인자로 강제 인식된다. 이점을 이해하지 못하면 이해할 수 없는 에러와 마주치거나 잘못된 결과를 얻게 된다. 내가 이걸 몰라서 낭비한 시간을 떠올리면 눈물이 앞을 가린다. 두가지 사례를 보자. 숫자가 주어졌을 때, 이에 해당하는 순서의 알파벳을 찾는 것이 목적이다.</p>
 <pre class="r"><code>sample(1:10) %&gt;% paste0(LETTERS[.])</code></pre>
-<pre><code>##  [1] &quot;7G&quot;  &quot;8H&quot;  &quot;9I&quot;  &quot;4D&quot;  &quot;1A&quot;  &quot;3C&quot;  &quot;2B&quot;  &quot;5E&quot;  &quot;6F&quot;  &quot;10J&quot;</code></pre>
+<pre><code>##  [1] &quot;7G&quot;  &quot;10J&quot; &quot;9I&quot;  &quot;2B&quot;  &quot;3C&quot;  &quot;4D&quot;  &quot;6F&quot;  &quot;8H&quot;  &quot;1A&quot;  &quot;5E&quot;</code></pre>
 <p>보는 바대로 숫자에 알파벳이 따라 붙었어 있다. 이는 <code>.</code>이 <code>LETTERS</code>의 인자로 활용되었기 때문이다. 그래서, lhs의 인자를 최초의 투입으로 보고 위와 같은 결과를 만든 것이다. 내가 원하는 결과물이 아니다.</p>
 <pre class="r"><code>sample(1:10) %&gt;% { paste0(LETTERS[.]) } </code></pre>
-<pre><code>##  [1] &quot;I&quot; &quot;G&quot; &quot;F&quot; &quot;D&quot; &quot;C&quot; &quot;B&quot; &quot;J&quot; &quot;A&quot; &quot;H&quot; &quot;E&quot;</code></pre>
+<pre><code>##  [1] &quot;H&quot; &quot;C&quot; &quot;D&quot; &quot;J&quot; &quot;F&quot; &quot;B&quot; &quot;E&quot; &quot;I&quot; &quot;A&quot; &quot;G&quot;</code></pre>
 <p>다른 예를 하나 더 보자.<a href="#fn2" class="footnoteRef" id="fnref2"><sup>2</sup></a></p>
 <pre><code>tibble(
   type = c(&quot;Fast&quot;, &quot;Slow&quot;, &quot;Fast&quot;, &quot;Fast&quot;, &quot;Slow&quot;),
@@ -88,20 +88,6 @@ library(&#39;magrittr&#39;)</code></pre>
 }</code></pre>
 <pre><code>##     Sepal.Length Sepal.Width Petal.Length Petal.Width   Species
 ## 1            5.1         3.5          1.4         0.2    setosa
-## 2            4.9         3.0          1.4         0.2    setosa
-## 3            4.7         3.2          1.3         0.2    setosa
-## 4            4.6         3.1          1.5         0.2    setosa
-## 5            5.0         3.6          1.4         0.2    setosa
-## 6            5.4         3.9          1.7         0.4    setosa
-## 7            4.6         3.4          1.4         0.3    setosa
-## 8            5.0         3.4          1.5         0.2    setosa
-## 143          5.8         2.7          5.1         1.9 virginica
-## 144          6.8         3.2          5.9         2.3 virginica
-## 145          6.7         3.3          5.7         2.5 virginica
-## 146          6.7         3.0          5.2         2.3 virginica
-## 147          6.3         2.5          5.0         1.9 virginica
-## 148          6.5         3.0          5.2         2.0 virginica
-## 149          6.2         3.4          5.4         2.3 virginica
 ## 150          5.9         3.0          5.1         1.8 virginica</code></pre>
 </div>
 <div id="tee-and-exposition" class="section level1">
@@ -115,7 +101,7 @@ matrix(ncol = 2) %T&gt;%
 plot %&gt;% # plot usually does not return anything.
 colSums</code></pre>
 <p><img src="/note/2017-11-15-magrittr_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
-<pre><code>## [1] 9.806001 6.628300</code></pre>
+<pre><code>## [1]  5.095882 -5.053791</code></pre>
 </div>
 <div id="exposition" class="section level2">
 <h2>Exposition</h2>
