--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,13 @@ This site is built with <a href="https://gohugo.io">Hugo</a> and XMIN theme by <
 
 <script async src="//yihui.name/js/center-img.js"></script>
 
+<script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+ <script src="//cdn.bootcss.com/highlight.js/9.12.0/languages/r.min.js"></script>
+ <script>
+ hljs.configure({languages: []});
+ hljs.initHighlightingOnLoad();
+ </script>
+
   
   <hr/>
   &copy; <a href="http://lostineconomics.com">Junsok Huhh</a> 2017 | <a href="https://github.com/anarinsk">Github</a>
