TEST: highlight.js

--- a/content/note/2017-11-16-myfont.html
+++ b/content/note/2017-11-16-myfont.html
@@ -3,11 +3,7 @@ title: "Use your font"
 author: "Junsok Huhh"
 date: 2017-11-16
 tags: ['font', 'showtext', 'R', 'R-package']
-categories: ['coding'] 
-output: 
-  html_document: 
-    theme: "flatly"
-    highlight: "zenburn"
+categories: ['coding', 'documentation'] 
 ---
 
 
