--- a/content/note/2017-11-16-myfont.html
+++ b/content/note/2017-11-16-myfont.html
@@ -86,6 +86,7 @@ dev.off()</code></pre>
 <p>이게 귀찮다면 ggplot2 패키지를 쓰자. ggplot2는 장치를 포맷 별로 편리하게 기록할 수 있는 통일적인 방법을 제공한다. <code>ggsave</code> 명령어를 쓰면 <code>dev.off()</code>없이 대부분의 포맷으로 아래와 같이 편리하게 저장할 수 있다.</p>
 <pre class="r"><code>ggsave(&quot;YOUR_FILENAME.pdf&quot;, p, width = 7, height = 4)
 ggsave(&quot;YOUR_FILENAME.png&quot;, p, width = 7, height = 4, dpi = 96)</code></pre>
+<p><a class="btn-cta-freequote" href="#">Compute <i class="fa fa-calculator"></i></a></p>
 </div>
 <div class="footnotes">
 <hr />
