--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Hugo XMin | lost in economics</title>
+    <title> Jun Sok Huhh | lost in economics</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
 
