--- a/public/index.html
+++ b/public/index.html
@@ -141,17 +141,26 @@ This site is built with <a href="https://gohugo.io">Hugo</a> and XMIN theme by <
   lf = new BareFoot();
   lf.init();
 </script>
-  <script src="//yihui.name/js/math-code.js"></script>
-<script async src="//cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  /* barefoot */
+<link rel="stylesheet" href="/css/barefoot.min.css">
+<script src="/js/barefoot.min.js"></script>
+<script>
+  lf = new BareFoot();
+  lf.init();
+</script>
 
+/* mathjax */
+<script src="//yihui.name/js/math-code.js"></script>
+<script async src="//cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <script async src="//yihui.name/js/center-img.js"></script>
 
+/* highlight.js */
 <script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
- <script src="//cdn.bootcss.com/highlight.js/9.12.0/languages/r.min.js"></script>
- <script>
+<script src="//cdn.bootcss.com/highlight.js/9.12.0/languages/r.min.js"></script>
+<script>
  hljs.configure({languages: []});
  hljs.initHighlightingOnLoad();
- </script>
+</script>
 
   
   <hr/>
