--- a/logs.html
+++ b/logs.html
@@ -126,9 +126,16 @@ $(document).ready(function () {
 <h1>2017-11-20</h1>
 <p>오늘에서야 Hugo의 작동 원리에 대해서 대체로 파악했다. 원리를 자세히 적진 않고 요약으로 적어두겠다.</p>
 <ol style="list-style-type: decimal">
-<li><code>theme/xmin-hugo</code> 아래서 고쳐야 영구 적용된다.</li>
-<li><code>layout</code> - footter, header, …</li>
-<li><code>staiic</code> - css</li>
+<li><code>theme/xmin-hugo</code> 테마의 기본이 되는 내용을 갖고 있다. 아울러, 이곳을 고치면 테마 전체가 영구적으로 변경된다. 일단 오늘 손본 내용은 아래의 두 항목이다.
+<ul>
+<li><code>layout</code> - <code>footer.html</code>, <code>header.html</code>, <code>footer_custom.html</code>, <code>header_custom.html</code></li>
+<li><code>layout</code>의 내용은 footer가 footer_custom을 header가 header_custom을 읽어들이도록 되어 있다.</li>
+<li><code>static</code> - css 관련 두 개의 항목</li>
+</ul></li>
+</ol>
+<p>이 곳을 고친 후, blogdown 패키지의 <code>blogdown::serve_site()</code>를 하게 되면 변경된 내용이 <code>public</code>으로 반영된다.</p>
+<ol start="2" style="list-style-type: decimal">
+<li><code>content</code> 디렉의 내용은 이용자가 글을 고친 후 반영하도록 만드는 것이다. 여기는 되도록 글을 고친 후 반영되도록만 하자.</li>
 </ol>
 <div id="theme-elements-customized" class="section level2">
 <h2>Theme elements customized</h2>
@@ -142,7 +149,10 @@ $(document).ready(function () {
 <div id="footer.html" class="section level3">
 <h3><code>footer.html</code></h3>
 <ul>
-<li>barefoot.min</li>
+<li>barefoot.min
+<ul>
+<li>barefoot의 경우 footer에 넣어야 제대로 작동했다.</li>
+</ul></li>
 </ul>
 </div>
 <div id="footer_custom.html" class="section level3">
@@ -156,10 +166,9 @@ $(document).ready(function () {
 </div>
 <div id="cv-" class="section level2">
 <h2>cv 페이지</h2>
-<p>기본 개념은 외부에서 만든 후 <code>public\cv</code> 폴더 안에 넣어주는 형태다.</p>
+<p>기본 개념은 외부에서 만든 후 <code>theme/xmin-hugo/static/cv</code> 폴더 안에 넣어주는 형태다.</p>
 <ol style="list-style-type: decimal">
-<li>일단, <code>index.html</code>은 앞서 페이지들의 index 페이지를 복사해서 넣은 후, cv는 short.hmtl의 형태로 완성된 제품을 넣어준다.</li>
-<li>완성하기 전 rmd 파일의 경우는 <code>admin\cv</code> 안에 있다.</li>
+<li>일단, <code>index.html</code>은 앞서 페이지들의 index 페이지를 복사해서 넣은 후, cv는 짧은 양식의 경우 short.hmtl의 형태로 완성된 제품을 넣어준다.</li>
 </ol>
 </div>
 </div>
