--- a/themes/hugo-xmin/static/cv/short.html
+++ b/themes/hugo-xmin/static/cv/short.html
@@ -151,7 +151,7 @@ $(document).ready(function () {
 </div>
 <div id="journal-articles" class="section level2">
 <h2>Journal Articles</h2>
-<p>Jun Sok Huhh and Jeong Wook Byun. 2017. “North Korea’s Nuclear Weapon Development and South Korea’s Strategic Reaction: A Signaling Game Approach.” <em>Ehwa Journal of Social Sciences</em> 33(1): 107–142 [Korean language]</p>
+<p>Jun Sok Huhh and Jeong Wook Byun. 2017. “North Korea’s Nuclear Weapon Development and South Korea’s Strategic Reaction: A Signaling Game Approach.” <em>Ehwa Journal of Social Sciences</em> 33(1): 107–142. [Korean language]</p>
 <p>Jun Sok Huhh and Jeong Wook Byun. 2014. “Hyperbolic Discounting and the Effect of Handset Subsidy Regulation in Mobile Telephony Service Market.” <em>Telecommunucations Review</em> 24(4):566–576. [Korean language]</p>
 <p>Jun Sok Huhh and Jeong Wook Byun. 2013. “Price Competition and Handset Subsidy Competition in Mobile Telephony Service Market.” <em>Telecommunucations Review</em> 23(5):676–685. [Korean language]</p>
 <p>Jun Sok Huhh and Jung-Kyu Choi. 2012. “The Decay in Contributions in a Public Goods Game: Learning Hypothesis, Strategy Hypothesis and Reciprocity Hypothesis Revisited.” <em>Journal of Econometric Theory and Econometrics</em> 23(2):165–186. [Korean language]</p>
