--- a/admin/logs.html
+++ b/admin/logs.html
@@ -169,6 +169,8 @@ $(document).ready(function () {
 <p>기본 개념은 외부에서 만든 후 <code>theme/xmin-hugo/static/cv</code> 폴더 안에 넣어주는 형태다.</p>
 <ol style="list-style-type: decimal">
 <li>일단, <code>index.html</code>은 앞서 페이지들의 index 페이지를 복사해서 넣은 후, cv는 짧은 양식의 경우 short.hmtl의 형태로 완성된 제품을 넣어준다.</li>
+<li>각 cv에 해당하는 rmd 파일을 만든 후에 이 페이지에서 html로 바꿔준다.</li>
+<li>github 업데이트 하면 완료</li>
 </ol>
 </div>
 </div>
