--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -34,6 +34,8 @@
 <main>
 
 <li><a href="/cv/short.html"  target="_blank">short version</a></li>
+<li><a href="/cv/long.html"  target="_blank">long version</a></li>
+
 
 </main>
 
