--- a/public/cv/long.html
+++ b/public/cv/long.html
@@ -127,18 +127,25 @@ $(document).ready(function () {
 <p>Team Leader, R&amp;I Team </br> 12 Daewangpangyo-ro 644beon-gil <span class="math inline">\(\cdot\)</span> NCSOFT <span class="math inline">\(\cdot\)</span> Seongnam Gyeonggi, South Korea 13494 </br> <i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:%20junsokhuhh@ncsoft.com">work</a> <i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:%20anarinsk@gmail.com">personal</a> <i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/anarinsk">personal</a> <i class="fa fa-home" aria-hidden="true"></i> <a href="http://lostineconomics.com">personal</a> | updated: November 18, 2017 </br></p>
 </div>
 <hr />
-<div id="employment" class="section level1">
-<h1>Employment</h1>
-<p><em>NCSOFT</em>, Team Leader (Seongnam Gyeonggi <span class="math inline">\(\cdot\)</span> South Korea) 2014–present</p>
-<p><em>KISDI</em>, Senior Researcher (Jinchun Chungchungbuk <span class="math inline">\(\cdot\)</span> South Korea) 2013–2014</p>
-<p><em>FourThirtyThree</em>, Data Anlysist (Seoul <span class="math inline">\(\cdot\)</span> South Korea) 2012–2013</p>
-<p><em>Seoul National University</em>, Postdoc. School of Economics (Seoul <span class="math inline">\(\cdot\)</span> South Korea) 2011–2012</p>
-</div>
 <div id="education" class="section level1">
 <h1>Education</h1>
-<p><em>Seoul National University</em>, Ph.D. School of Economics 2010</p>
-<p><em>Seoul National University</em>, M.A. School of Economics 1997</p>
+<p><em>Seoul National University</em>, Ph.D. School of Economics 2010 </br> Thesis: Three Essays on Evolutionary Game Theory and Its Economic Applications</p>
+<p><em>Seoul National University</em>, M.A. School of Economics 1997 </br> Thesis: An Critical Inquiry on New Institutional Economics</p>
 <p><em>Seoul National University</em>, B.A. School of Economics 1995</p>
+</div>
+<div id="employment-industry" class="section level1">
+<h1>Employment (Industry)</h1>
+<p><em>NCSOFT</em>, Team Leader (Seongnam Gyeonggi <span class="math inline">\(\cdot\)</span> South Korea) 2014–present</p>
+<p><em>KISDI</em>*, Senior Researcher (Jinchun Chungchungbuk <span class="math inline">\(\cdot\)</span> South Korea) 2013–2014 </br> * Korea Information Society Development Institute</p>
+<p><em>FourThirtyThree</em>, Data Anlysist (Seoul <span class="math inline">\(\cdot\)</span> South Korea) 2012–2013</p>
+</div>
+<div id="employment-academy" class="section level1">
+<h1>Employment (Academy)</h1>
+<p><em>Seoul National University</em>, Postdoc., School of Economics (Seoul <span class="math inline">\(\cdot\)</span> South Korea) 2011–2012</p>
+<p><em>Seoul National University</em>, Lecturer, Information and Multimedia Culture, 2007 – 2013 </br> Lecture: “Economics and Management of Cotent”, “Serious Gamming”</p>
+<p><em>Kyunghee University</em>, Lecturer, Humanitas College, 2013 – 2013 </br> Lecture: “Game Theory, Evolution and Cooperation”</p>
+<p><em>Seoul National University</em>, Lecturer, Graduate School of Convergence Science and Technology, 2011 </br> Lecture: “Understanding Digital Games”</p>
+<p><em>Seoul National University</em>, Lecturer, School of Economics, 2004–2010 Lecture: “Principle of Economics”“,”Microeconomic Theory&quot;</p>
 </div>
 <div id="publications" class="section level1">
 <h1>Publications</h1>
@@ -161,6 +168,31 @@ $(document).ready(function () {
 <p>Jun Sok Huhh. 1998. “On Theoretical Foundation of New Institutionalist Economics : ‘Power’ vs, ‘Efficiency’.” <em>Review of Social Economics</em> 11. [Korean language]</p>
 <p>Jun Sok Huhh and Jung-Kyu Choi. 1998. “Review of Radical Institutionalist economics.” <em>Trend and Perspective</em> 37. [Korean language]</p>
 </div>
+</div>
+<div id="research-interests" class="section level1">
+<h1>Research Interests</h1>
+<div id="graduate-work" class="section level2">
+<h2>Graduate Work</h2>
+<p>In my doctoral thesis, methods of evolutionary game theory and its dynamics are applied to some economic theories. This consists of three independently-themed papers. Each title is a. role of opportunistic punishment in the evolution of cooperation cooperation a. Evolutionary dynamics on social ties a. Replicator dynamics of population with players’ differing abilities.</p>
+</div>
+<div id="industry-works" class="section level2">
+<h2>Industry Works</h2>
+<p>In NCSOFT, my tasks includes designing ’(online) game’ economy, data analysis on log data of online games, and planning corpoerate strategies with analysis on economic situation. In KISDI, I worked mainly on competition policy for telecommunication business. My main topics were tariff policy of mobile communications and antitrust issues of Korean online search engine.</p>
+</div>
+<div id="other-topics" class="section level2">
+<h2>Other Topics</h2>
+<p>Another parts of my research focuses on online games and their economic impacts on society. Most of my works are based on the specific context of Korean online gaming including effects of RMT (Real-Money Trading) on online gaming service and individual gamers. Currently progressing researches are:</p>
+<ol style="list-style-type: lower-alpha">
+<li>Relationship among game design, players’ behaviors and RMT</li>
+<li>User data analysis of Korean online/mobile gaming</li>
+</ol>
+</div>
+</div>
+<div id="honors" class="section level1">
+<h1>Honors</h1>
+<p>Best Dissertation of The College of Social Sciences of Seoul National University of the Year, 2010</p>
+<p>Best Paper for Young Economists Competition hosted by Korean Economic Association(KEA) at 14th International Conference, 2010</p>
+<p><em>Il-ju</em> Foundation Graduate Scholarship, 1997–1999</p>
 </div>
 <div id="technical-skills" class="section level1">
 <h1>Technical Skills</h1>
