--- a/public/cv/short.html
+++ b/public/cv/short.html
@@ -130,7 +130,7 @@ $(document).ready(function () {
 <div id="employment" class="section level1">
 <h1>Employment</h1>
 <p><em>NCSOFT</em>, Team Leader (Seongnam Gyeonggi <span class="math inline">\(\cdot\)</span> South Korea) 2014–present</p>
-<p><em>KISDI</em>, Senior Researcher (Jinchun Chungchungbuk <span class="math inline">\(\cdot\)</span> South Korea) 2013–2014</p>
+<p><em>KISDI</em> *, Senior Researcher (Jinchun Chungchungbuk <span class="math inline">\(\cdot\)</span> South Korea) 2013–2014 <br /> *Korea Information Society Development Institute</p>
 <p><em>FourThirtyThree</em>, Data Anlysist (Seoul <span class="math inline">\(\cdot\)</span> South Korea) 2012–2013</p>
 <p><em>Seoul National University</em>, Postdoc. School of Economics (Seoul <span class="math inline">\(\cdot\)</span> South Korea) 2011–2012</p>
 </div>
