--- a/public/cv/long.html
+++ b/public/cv/long.html
@@ -136,16 +136,16 @@ $(document).ready(function () {
 <div id="employment-industry" class="section level1">
 <h1>Employment (Industry)</h1>
 <p><em>NCSOFT</em>, Team Leader (Seongnam Gyeonggi <span class="math inline">\(\cdot\)</span> South Korea) 2014–present</p>
-<p><em>KISDI</em>*, Senior Researcher (Jinchun Chungchungbuk <span class="math inline">\(\cdot\)</span> South Korea) 2013–2014 </br> * Korea Information Society Development Institute</p>
+<p><em>KISDI</em> *, Senior Researcher (Jinchun Chungchungbuk <span class="math inline">\(\cdot\)</span> South Korea) 2013–2014 </br> *Korea Information Society Development Institute</p>
 <p><em>FourThirtyThree</em>, Data Anlysist (Seoul <span class="math inline">\(\cdot\)</span> South Korea) 2012–2013</p>
 </div>
 <div id="employment-academy" class="section level1">
 <h1>Employment (Academy)</h1>
 <p><em>Seoul National University</em>, Postdoc., School of Economics (Seoul <span class="math inline">\(\cdot\)</span> South Korea) 2011–2012</p>
-<p><em>Seoul National University</em>, Lecturer, Information and Multimedia Culture, 2007 – 2013 </br> Lecture: “Economics and Management of Cotent”, “Serious Gamming”</p>
-<p><em>Kyunghee University</em>, Lecturer, Humanitas College, 2013 – 2013 </br> Lecture: “Game Theory, Evolution and Cooperation”</p>
-<p><em>Seoul National University</em>, Lecturer, Graduate School of Convergence Science and Technology, 2011 </br> Lecture: “Understanding Digital Games”</p>
-<p><em>Seoul National University</em>, Lecturer, School of Economics, 2004–2010 Lecture: “Principle of Economics”“,”Microeconomic Theory&quot;</p>
+<p><em>Seoul National University</em>, Lecturer, Information and Multimedia Culture, 2007 – 2013 </br> Lecture: Economics and Management of Cotent, Serious Gamming</p>
+<p><em>Kyunghee University</em>, Lecturer, Humanitas College, 2013 – 2013 </br> Lecture: Game Theory, Evolution, and Cooperation</p>
+<p><em>Seoul National University</em>, Lecturer, Graduate School of Convergence Science and Technology, 2011 </br> Lecture: Understanding Digital Games</p>
+<p><em>Seoul National University</em>, Lecturer, School of Economics, 2004–2010 Lecture: Principle of Economics, Microeconomic Theory</p>
 </div>
 <div id="publications" class="section level1">
 <h1>Publications</h1>
@@ -173,7 +173,12 @@ $(document).ready(function () {
 <h1>Research Interests</h1>
 <div id="graduate-work" class="section level2">
 <h2>Graduate Work</h2>
-<p>In my doctoral thesis, methods of evolutionary game theory and its dynamics are applied to some economic theories. This consists of three independently-themed papers. Each title is a. role of opportunistic punishment in the evolution of cooperation cooperation a. Evolutionary dynamics on social ties a. Replicator dynamics of population with players’ differing abilities.</p>
+<p>In my doctoral thesis, methods of evolutionary game theory and its dynamics are applied to some economic theories. This consists of three independently-themed papers. Each title is</p>
+<ol style="list-style-type: lower-alpha">
+<li>role of opportunistic punishment in the evolution of cooperation cooperation</li>
+<li>Evolutionary dynamics on social ties</li>
+<li>Replicator dynamics of population with players’ differing abilities.</li>
+</ol>
 </div>
 <div id="industry-works" class="section level2">
 <h2>Industry Works</h2>
@@ -190,9 +195,9 @@ $(document).ready(function () {
 </div>
 <div id="honors" class="section level1">
 <h1>Honors</h1>
-<p>Best Dissertation of The College of Social Sciences of Seoul National University of the Year, 2010</p>
-<p>Best Paper for Young Economists Competition hosted by Korean Economic Association(KEA) at 14th International Conference, 2010</p>
-<p><em>Il-ju</em> Foundation Graduate Scholarship, 1997–1999</p>
+<p>Best Dissertation of The College of Social Sciences of Seoul National University of the Year 2010</p>
+<p>Best Paper for Young Economists Competition hosted by Korean Economic Association (KEA) at 14th International Conference 2010</p>
+<p><em>Il-ju</em> Foundation Graduate Scholarship 1997–1999</p>
 </div>
 <div id="technical-skills" class="section level1">
 <h1>Technical Skills</h1>
