--- a/themes/hugo-xmin/static/cv/index.html
+++ b/themes/hugo-xmin/static/cv/index.html
@@ -19,7 +19,7 @@
 
       <li><a href="/tags/">Tags</a></li>
 
-      <li><a href="/cv/">cv</a></li>
+      <li><a href="/cv/">CV</a></li>
 
     </ul>
     <hr/>
