MOD: Use your font

--- a/content/note/2017-11-16-myfont.html
+++ b/content/note/2017-11-16-myfont.html
@@ -87,6 +87,26 @@ dev.off()</code></pre>
 <pre class="r"><code>ggsave(&quot;YOUR_FILENAME.pdf&quot;, p, width = 7, height = 4)
 ggsave(&quot;YOUR_FILENAME.png&quot;, p, width = 7, height = 4, dpi = 96)</code></pre>
 </div>
+<div id="font-embedding" class="section level1">
+<h1>Font embedding</h1>
+<p>이건 문제가 될 수도 있고 아닐 수도 있다. 하지만 문제가 될 것 같으면 확실히 해두면 되겠다.</p>
+<pre class="r"><code># install.packages(&#39;Cairo&#39;)
+library(Cairo) 
+
+font_add(family = &quot;notosanskr&quot;, regular = &quot;fonts/NotoSansCJKkr-Regular.otf&quot;)
+
+q &lt;- ggplot(mtcars, aes(x=wt, y=mpg)) + geom_point() +
+  ggtitle(&quot;Fuel Efficiency of 32 Cars 32개 자동차의 연료 효율&quot;) +
+  xlab(&quot;Weight (x1000 lb) 무게&quot;) + ylab(&quot;Miles per Gallon 갤론 당 마일&quot;) +
+  theme(title=element_text(family=&quot;notosanskr&quot;, size = 12),
+        axis.title=element_text(family=&quot;notosanskr&quot;, size = 8),
+        strip.text=element_text(family=&quot;notosanskr&quot;, size = 8))
+
+print(q); </code></pre>
+<p><img src="/note/2017-11-16-myfont_files/figure-html/unnamed-chunk-10-1.png" width="672" /></p>
+<pre class="r"><code>ggsave(p, filename=&quot;./blah.pdf&quot;, 
+       width=5, height=3.5, units=&quot;in&quot;, device=cairo_pdf)</code></pre>
+</div>
 <div class="footnotes">
 <hr />
 <ol>
