FIX: relative url

--- a/content/note/2017-11-16-myfont.html
+++ b/content/note/2017-11-16-myfont.html
@@ -110,7 +110,7 @@ print(q);</code></pre>
 <pre class="r"><code>#
 ggsave(filename=&quot;./foo.pdf&quot;, q, device=cairo_pdf)
 #</code></pre>
-<p>위 처럼 명시적으로 device를 <code>cairo_pdf</code>로 지정해주면 <code>foo.pdf</code> 문서에 로딩한 폰트가 확실하게 포함된다. <a href="download/foo.pdf">여기서</a> 확인해보시라.</p>
+<p>위 처럼 명시적으로 device를 <code>cairo_pdf</code>로 지정해주면 <code>foo.pdf</code> 문서에 로딩한 폰트가 확실하게 포함된다. <a href="http://lostineconomics.netlify.com/note/download/foo.pdf/download/foo.pdf">여기서</a> 확인해보시라.</p>
 <!--- 
 REFERENCE 
 https://cran.rstudio.com/web/packages/showtext/vignettes/introduction.html
